# nuage_de_points

./: .gitignore  email_prof.txt  report.pptx
MVA_NPM_TP_4/: report.docx
MVA_NPM_TP_4/PointRender/: CMakeLists.txt  Camera.cpp  Camera.h  Exception.h  Makefile  PointCloud.h  PointRender.cpp  Readme.txt  Trackball.cpp  Vec3.h  include_opengl.h  kd_tree_3d.cpp  kd_tree_3d.h  matrixmath.h  nanoflann.h
MVA_NPM_TP_4/PointRender/data/: dino.pn  face.pn  igea.pn
TP1_materials/: TP1_Structures_Neighborhoods.docx
TP1_materials/code/: neighborhoods.py  subsampling.py  transformation.py
TP2_materials/: TP2_Recalage_ICP.docx
TP2_materials/code/: ICP.py
TP2_materials/code/utils/: visu.py
TP4_materials/: TP4_Descripteurs.docx
TP4_materials/code/: classification.py  descriptors.py
TP4_materials/data/: Lille_street_test_preds.txt
TP5_materials/: TP5_Reconstruction_Surfaces.docx
TP5_materials/code/: imls.py
TP5_materials/data/: bunny_normals.ply  grid.csv  sphere_normals.ply
TP6_materials/: TP6_Modelisation.docx
TP6_materials/code/: RANSAC.py  RegionGrowing.py
projet/: report.pptx
projet/code/: classification.py  descriptors.py  main.py
projet/code/utils/: withtimer.py
projet/report/: rapport.tex  sample.bib
projet/src/: CMakeLists.txt  example.cpp  kd_tree_3d.h  tinyply.h
